Examples of server-side JSON handling and i18n support

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,6 +34,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.gson-2.8.5.jar=lib/gson-2.8.5.jar
 file.reference.mysql-connector-java-8.0.13.jar=lib\\mysql-connector-java-8.0.13.jar
 includes=**
 j2ee.compile.on.save=true
@@ -44,7 +45,8 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.13.jar}
+    ${file.reference.mysql-connector-java-8.0.13.jar}:\
+    ${file.reference.gson-2.8.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
